Remove Guava from core and nlp; fix unclosed-stream leaks