@@ -3,20 +3,17 @@ package company.evo.jmorphy2.nlp;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.Collections;
+import java.util.Set;
 
-import com.google.common.base.Joiner;
-import com.google.common.base.Strings;
-import com.google.common.collect.Ordering;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableList;
 
 import company.evo.jmorphy2.ParsedWord;
 
 
 public class Node {
-    public final ImmutableSet<String> grammemeValues;
+    public final Set<String> grammemeValues;
     public final String grammemeValuesStr;
-    public final ImmutableList<Node> children;
+    public final List<Node> children;
     public final ParsedWord parsed;
     public final String word;
     public final float score;
@@ -24,24 +21,26 @@ public class Node {
 
     public final long uniqueHash;
 
-    public Node(ImmutableSet<String> grammemeValues, ImmutableList<Node> children, float score) {
+    public Node(Set<String> grammemeValues, List<Node> children, float score) {
         this(grammemeValues, children, null, null, score);
     }
 
-    public Node(ImmutableSet<String> grammemeValues, String word, float score) {
+    public Node(Set<String> grammemeValues, String word, float score) {
         this(grammemeValues, null, null, word, score);
     }
 
-    public Node(ImmutableSet<String> grammemeValues, ParsedWord parsed, float score) {
+    public Node(Set<String> grammemeValues, ParsedWord parsed, float score) {
         this(grammemeValues, null, parsed, parsed.word, score);
     }
 
-    protected Node(ImmutableSet<String> grammemeValues, ImmutableList<Node> children, ParsedWord parsed, String word, float score) {
+    protected Node(Set<String> grammemeValues, List<Node> children, ParsedWord parsed, String word, float score) {
         if (grammemeValues == null) {
             throw new RuntimeException("grammemeValues must not be null");
         }
         this.grammemeValues = grammemeValues;
-        this.grammemeValuesStr = Joiner.on(",").join(Ordering.natural().sortedCopy(grammemeValues));
+        List<String> sortedGrammemeValues = new ArrayList<>(grammemeValues);
+        Collections.sort(sortedGrammemeValues);
+        this.grammemeValuesStr = Joiner.on(",").join(sortedGrammemeValues);
         this.children = children;
         this.parsed = parsed;
         this.word = word;
@@ -59,11 +58,11 @@ public class Node {
         return children == null;
     }
 
-    public ImmutableList<Node> getChildren() {
+    public List<Node> getChildren() {
         if (hasChildren()) {
             return children;
         }
-        return ImmutableList.of();
+        return List.of();
     }
 
     public int getChildrenSize() {
@@ -130,7 +129,7 @@ public class Node {
     }
 
     protected String prettyToString(boolean withScore, int level) {
-        String pad = level == 0 ? "" : String.format("\n%s", Strings.repeat(" ", level * 4));
+        String pad = level == 0 ? "" : String.format("\n%s", " ".repeat(level * 4));
         List<String> childrenStrings = new ArrayList<String>();
         for (Node child : getChildren()) {
             childrenStrings.add(child.prettyToString(withScore, level + 1));
@@ -148,8 +147,8 @@ public class Node {
     }
 
     public static class Top extends Node {
-        public Top(ImmutableList<Node> children, float score) {
-            super(ImmutableSet.of("TOP"), children, score);
+        public Top(List<Node> children, float score) {
+            super(Set.of("TOP"), children, score);
         }
     };
 }
