@@ -6,12 +6,8 @@ import java.util.Deque;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.Collections;
+import java.util.Set;
 
-import com.google.common.base.Joiner;
-import com.google.common.base.Splitter;
-import com.google.common.base.CharMatcher;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableList;
 
 import company.evo.jmorphy2.ParsedWord;
 import company.evo.jmorphy2.MorphAnalyzer;
@@ -50,7 +46,7 @@ public class SimpleTagger extends Tagger {
         return results;
     }
 
-    private Node reduce(Rule rule, ImmutableList<Node> nodes) {
+    private Node reduce(Rule rule, List<Node> nodes) {
         List<Node> rNodes = nodes.subList(0, rule.rightSize);
         List<String> words = new ArrayList<String>();
         float score = 0.0f;
@@ -61,7 +57,7 @@ public class SimpleTagger extends Tagger {
         return new Node(rule.left, Joiner.on(" ").join(words), score);
     }
 
-    private void tagAll(List<Node.Top> results, Deque<Node> nodesStack, ImmutableList<Node> nodes) throws IOException {
+    private void tagAll(List<Node.Top> results, Deque<Node> nodesStack, List<Node> nodes) throws IOException {
         List<Node> reducedNodes = new ArrayList<Node>();
 
         // test rules
@@ -75,7 +71,7 @@ public class SimpleTagger extends Tagger {
             Node tNode = nodes.get(0);
             List<ParsedWord> parseds = morph.parse(tNode.word);
             for (ParsedWord p : parseds) {
-                reducedNodes.add(new Node(ImmutableSet.copyOf(p.tag.getGrammemeValues()),
+                reducedNodes.add(new Node(Set.copyOf(p.tag.getGrammemeValues()),
                                           p,
                                           p.score));
                 if (p.tag.contains("Fixd")) {
@@ -95,13 +91,13 @@ public class SimpleTagger extends Tagger {
         for (Node node : reducedNodes) {
             nodesStack.addLast(node);
             int offset = node.hasChildren() ? node.getChildren().size() : 1;
-            ImmutableList<Node> tail = nodes.subList(offset, nodes.size());
+            List<Node> tail = nodes.subList(offset, nodes.size());
             if (tail.isEmpty()) {
                 float score = 0.0f;
                 for (Node n : nodesStack) {
                     score += n.score;
                 }
-                results.add(new Node.Top(ImmutableList.copyOf(nodesStack), score));
+                results.add(new Node.Top(List.copyOf(nodesStack), score));
             } else {
                 tagAll(results, nodesStack, tail);
             }
@@ -110,11 +106,11 @@ public class SimpleTagger extends Tagger {
     }
 
     public Node.Top tag(String[] tokens) throws IOException {
-        ImmutableList<Node> tokenNodes = makeTokens(tokens);
+        List<Node> tokenNodes = makeTokens(tokens);
 
         float score = 0.0f;
         int tokensSize = tokenNodes.size();
-        ImmutableList.Builder<Node> nodesBuilder = ImmutableList.builder();
+        List<Node> nodesBuilder = new ArrayList<>();
         int i = 0;
         while (i < tokensSize) {
             Rule mRule = rules.match(tokenNodes);
@@ -127,7 +123,7 @@ public class SimpleTagger extends Tagger {
                 List<ParsedWord> parseds = morph.parse(tNode.word);
                 if (!parseds.isEmpty()) {
                     ParsedWord p = parseds.get(0);
-                    nodesBuilder.add(new Node(ImmutableSet.copyOf(p.tag.getGrammemeValues()),
+                    nodesBuilder.add(new Node(Set.copyOf(p.tag.getGrammemeValues()),
                                               p,
                                               p.score));
                     score += p.score;
@@ -137,15 +133,15 @@ public class SimpleTagger extends Tagger {
                 i++;
             }
         }
-        return new Node.Top(nodesBuilder.build(), score);
+        return new Node.Top(List.copyOf(nodesBuilder), score);
     }
 
-    private ImmutableList<Node> makeTokens(String[] words) {
-        ImmutableList.Builder<Node> tokensBuilder = ImmutableList.builder();
+    private List<Node> makeTokens(String[] words) {
+        List<Node> tokensBuilder = new ArrayList<>();
         for (String w : words) {
-            tokensBuilder.add(new Node(ImmutableSet.of("UNKN"), w, 1.0f));
+            tokensBuilder.add(new Node(Set.of("UNKN"), w, 1.0f));
         }
-        return tokensBuilder.build();
+        return List.copyOf(tokensBuilder);
     }
 
     public static final Ruleset defaultRules = new Ruleset();
